Refs #8627; fixed selector for media-player title; raised timeout to 8 sec before doing the background image preloading because of the coverflow which sometimes blocks the browser

--- a/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
+++ b/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
@@ -37,7 +37,7 @@
 
 }
 
-h1#player-title {
+h2#player-title {
     background-color:#E8E8E8;
     color: black;
     font-size: 1em;
